--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="col s12 l7 text">
                         <p>Développeuse junior, j'étudie depuis 8 mois un métier qui assouvit ma curiosité et me fait découvrir un monde passionnant et en perpétuelle évolution.</p>
                         <p>Je viens d'obtenir ma certification Développeur Codeur Web avec <a class="teal-text text-lighten-4" href="https://www.wf3.fr/?gclid=CjwKCAjwlYCHBhAQEiwA4K21m_RNDbUkAEaCjhMsEp42QgIg25btfTO18r0kfw6n8ZvoaZ6PwwucMBoCRZIQAvD_BwE" target="_blank">WebForce3</a> et vais bientôt entrer à la <a href="https://nfactory.school/" class="teal-text text-lighten-4" target="_blank">NFactory School</a>.</p>
-                        <p>Ces formations sont intensives et sont l'occasion de développer un savoir-faire unique via un panel de compétences que j'ai pu mettre à profil lors de cas pratiques.</p>
+                        <p>Ces formations sont intensives et sont l'occasion de développer un savoir-faire unique via un panel de compétences que j'ai pu mettre à profit lors de cas pratiques.</p>
                     </div>
                     <div class="col s5 hide-on-med-and-down">
                         <div class="profile right">
