--- a/politique-de-confidentialite.html
+++ b/politique-de-confidentialite.html
@@ -88,7 +88,7 @@
                 <h4>Consentement</h4>
                 <p>Les utilisateurs conviennent qu’en utilisant le site, ils consentent aux conditions énoncées dans la présente politique de confidentialité ainsi qu'à la collecte, à l’utilisation et la conservation des données énumérées dans la présente politique.</p>
                 <h4>Données personnelles que je collecte</h4>
-                <p>je ne collectons aucune donnée automatiquement sur le site.</p>
+                <p>je ne collecte aucune donnée automatiquement sur le site.</p>
                 <p> je peux collecter les données suivantes lorsque vous effectuez certaines fonctions sur le site :</p>
                 <ul>
                     <li>Prénom et nom</li>
