--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
         <title>Charlotte Saidi | Développeuse Web Junior | Porfolio</title>
         <meta name="description" content="Portfolio, Développeuse Web Junior. En recherche de nouveaux talents ? Je suis incluse dans les plus récents packages.">
+	<meta property="og:image" content="assets/images/favicon//mstile-150x150.png"/>
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon//favicon-32x32.png">
