--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                                         <img src="assets/images/screenshot-loopstudios.jpg" alt="Maquette du projet LoopStudios"/>
                                         <figcaption>
                                             <h2 class="teal-text">LoopStudios Landing Page</h2>
-                                            <p>Solution pour le challenge "Page d'accueil de <i>LoopStudios</i>" sur FrontEnd Mentor. Objectifs: travailler l'intégration responsive. Les technologies n'étaient pas imposées.</p>
+                                            <p>Solution pour le challenge "Page d'accueil de <i>LoopStudios</i>" sur FrontEnd Mentor. Objectifs: travailler l'intégration responsive. Les technologies n'étaient pas imposées. <br> &copy;Maquette: FrontEnd Mentor</p>
                                             <div class="title">
                                                 <div class="border-top title-parts"></div>
                                                 <p class="sub-title title-parts">Outils</p>
@@ -567,7 +567,7 @@
                                         <img src="assets/images/screenshot-sunnysideAgency.jpg" alt="Maquette du projet SunnySide"/>
                                         <figcaption>
                                             <h2 class="teal-text">SunnySide Agency Landing Page</h2>
-                                            <p>Solution pour le challenge "Page d'accueil de <i>Sunnyside Agency</i>" sur FrontEnd Mentor. Objectifs: travailler l'intégration responsive. Là encore, les technologies n'étaient pas imposées.</p>
+                                            <p>Solution pour le challenge "Page d'accueil de <i>Sunnyside Agency</i>" sur FrontEnd Mentor. Objectifs: travailler l'intégration responsive. Là encore, les technologies n'étaient pas imposées. <br> &copy;Maquette: FrontEnd Mentor</p>
                                             <div class="title">
                                                 <div class="border-top title-parts"></div>
                                                 <p class="sub-title title-parts">Outils</p>
