animation show au choix projet

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <!-- Mobile Menu -->
         <ul id="slide-out" class="sidenav nav right">
             <li class="border-top-right"></li>
+            <li><a class="sidenav-close right-align" href="#!">X</a></li>
             <li><a class="sidenav-head-link" href="#aPropos">A propos</a></li>
             <li><a class="sidenav-head-link" href="#competences">Compétences</a></li>
             <li><a class="sidenav-head-link" href="#portfolio">Portfolio</a></li>
@@ -587,7 +588,12 @@
                                 </li>
                             </ul>
                         </div>
-                    
+                        <div class="col s12 competence_show_btn">
+                            <button class="btn-small right show_blocks" data-target="show_0">Voir plus</button>
+                        </div>
+                    </div> 
+
+                    <div class="row hidden" id="show_0">
                         <div class="col s12 l6">
                             <ul class="demo-3">
                                 <li>
@@ -613,6 +619,9 @@
                                 </li>
                             </ul>
                         </div>
+                        <!-- <div class="col s12 competence_show_btn">
+                            <button class="btn-small right show_blocks" data-target="show_1">Voir plus</button>
+                        </div> -->
                     </div><!--row-->
                 </div><!--container-->
             </div>
