--- a/index.html
+++ b/index.html
@@ -481,6 +481,34 @@
                 <div class="container">
                     <h6 class="competences white-text">Portfolio</h6>
                     <div class="row">
+                    
+                        <div class="col s12 l6">
+                            <ul class="demo-3">
+                                <li>
+                                    <figure>
+                                        <img src="assets/images/crowdfunding.jpg" alt="Maquette du projet SunnySide"/>
+                                        <figcaption>
+                                            <h2 class="teal-text">Crowdfunding Product Page</h2>
+                                            <p>Solution pour le challenge "<i>Crowdfunding Product Page</i>" sur FrontEnd Mentor. Objectifs: travailler l'intégration responsive,  s'amuser et en apprendre toujours un peu plus. <br> &copy;Maquette: FrontEnd Mentor</p>
+                                            <div class="title">
+                                                <div class="border-top title-parts"></div>
+                                                <p class="sub-title title-parts">Outils</p>
+                                                <div class="border-top-right title-parts"></div>
+                                            </div>
+                                            <p>VueJs <strong class="separator">~</strong> MaterializeCss <strong class="separator">~</strong> JQuery</p>
+                                            <div class="title">
+                                                <div class="border-top title-parts"></div>
+                                                <p class="sub-title title-parts">Liens</p>
+                                                <div class="border-top-right title-parts"></div>
+                                            </div>
+                                            <a href="https://charlottesaidi.github.io/crowdfunding-product-page/" class="btn-primary btn-small wave-effect" target="_blank">Visiter</a>
+                                            <a href="https://www.frontendmentor.io/" class="btn-primary btn-small wave-effect" target="_blank">FrontEnd Mentor</a>
+                                        </figcaption>
+                                    </figure>
+                                </li>
+                            </ul>
+                        </div>
+
                         <div class="col s12 l6">
                             <ul class="demo-3">
                                 <li>
@@ -561,7 +589,13 @@
                                 </li>
                             </ul>
                         </div>
-                    
+
+                        <div class="col s12 competence_show_btn">
+                            <button class="btn-small right show_blocks" data-target="show_0">Voir plus</button>
+                        </div>
+                    </div> 
+
+                    <div class="row hidden" id="show_0">
                         <div class="col s12 l6">
                             <ul class="demo-3">
                                 <li>
@@ -588,12 +622,6 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col s12 competence_show_btn">
-                            <button class="btn-small right show_blocks" data-target="show_0">Voir plus</button>
-                        </div>
-                    </div> 
-
-                    <div class="row hidden" id="show_0">
                         <div class="col s12 l6">
                             <ul class="demo-3">
                                 <li>
