--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                             <ul class="demo-3">
                                 <li>
                                     <figure>
-                                        <img src="assets/images/portfolio.png" alt="Maquette du portoflio"/>
+                                        <img src="assets/images/portfolio.jpg" alt="Maquette du portoflio"/>
                                         <figcaption>
                                             <h2 class="teal-text">Portfolio</h2>
                                             <p>Version VueJs de mon portfolio. Je découvre le framework et le concept de SPA et m'exerce à son utilisation. Vous êtes en ce moment sur la version native</p>
@@ -626,7 +626,7 @@
                             <ul class="demo-3">
                                 <li>
                                     <figure>
-                                        <img src="assets/images/graphisme.png" alt="Maquette du projet AutoLoc Agence"/>
+                                        <img src="assets/images/graphisme.jpg" alt="Maquette du projet AutoLoc Agence"/>
                                         <figcaption>
                                             <h2 class="teal-text">AutoLoc Agence</h2>
                                             <p>Projet de formation chez WebForce3. Examen des techniques d'intégration Web et responsive.</p>
