--- a/politique-de-confidentialite.html
+++ b/politique-de-confidentialite.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Charlotte Saidi | Développeuse Web Junior | Porfolio</title>
         <meta name="description" content="Portfolio, Développeuse Web Junior. En recherche de nouveaux talents ? Je suis incluse dans les plus récents packages.">
         <!-- Favicons -->
@@ -14,16 +14,11 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <!-- CSS + FONTS -->
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="assets/css/style.css" type="text/css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/53fe39a7b7.js" crossorigin="anonymous"></script>
-
-        <!-- SDK EmailJS -->
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     </head>
 
     <body>
@@ -33,7 +28,7 @@
                 <div class="border-top-right"></div>
                 <nav class="white nav z-depth-2">
                     <div class="logo back-logo">
-                        <img src="assets/images/logo.png" alt="Logo C.S" class="logo-img">
+                        <img src="assets/images/logo.webp" alt="Logo C.S" class="logo-img">
                     </div>
                     <div class="nav-wrapper col s12 m12">
                         <ul class="right">
@@ -95,7 +90,7 @@
                     <li>Email</li>
                 </ul>
                 <p>Ces données sont recueillies lors de l'utilisation du formulaire de contact</p>
-                <p>Veuillez noter que je ne collecte que les données qui me aident à atteindre l’objectif énoncé dans cette politique de confidentialité. Je ne recueillerai pas de données supplémentaires sans vous en informer au préalable.</p>
+                <p>Veuillez noter que je ne collecte que les données qui m'aident à atteindre l’objectif énoncé dans cette politique de confidentialité. Je ne recueillerai pas de données supplémentaires sans vous en informer au préalable.</p>
                 <h4>Comment j'utilise les données personnelles</h4>
                 <p>Les données personnelles recueillies sur le site seront utilisées uniquement aux fins précisées dans la présente politique ou indiquées sur le formulaire de contact. </p>
                 <p>Les données que je recueille lorsque l’utilisateur exécute certaines fonctions ne sont utilisées qu'à des fins de communication</p>
@@ -150,11 +145,6 @@
                 </div>
             </div>
         </footer>
-
-        <!--Import jQuery before materialize.js-->
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script type="text/javascript" src="assets/js/main.js"></script>
 
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
