--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
         <link rel="mask-icon" href="assets/images/favicon//safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
-        <!-- CSS + FONTS -->
+        <!-- CSS  -->
         <link rel="preload" as="image" href="assets/images/separation.webp">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Qwigley&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link href="assets/css/style.css" type="text/css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -820,8 +818,8 @@
                 </div>
             </div>
         </footer>
-
-        <script src="https://kit.fontawesome.com/53fe39a7b7.js" crossorigin="anonymous"></script>
+    </body>
+    <script src="https://kit.fontawesome.com/53fe39a7b7.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -835,6 +833,4 @@
         ga('create', 'UA-60673008-2', 'auto');
         ga('send', 'pageview');
         </script>
-
-    </body>
 </html>
