--- a/index.html
+++ b/index.html
@@ -480,6 +480,32 @@
                             <ul class="demo-3">
                                 <li>
                                     <figure>
+                                        <img src="assets/images/planets.webp" alt="Maquette du projet Planets Fact" height="400"/>
+                                        <figcaption>
+                                            <h2 class="teal-text">Planets Fact site</h2>
+                                            <p>Solution pour le challenge "<i>Planets Fact site</i>" sur FrontEnd Mentor. Un petit site de huit pages, informatif, sur notre système solaire. </p>
+                                            <div class="title">
+                                                <div class="border-top title-parts"></div>
+                                                <p class="sub-title title-parts">Outils</p>
+                                                <div class="border-top-right title-parts"></div>
+                                            </div>
+                                            <p>VueJs <strong class="separator">~</strong> Sass <strong class="separator">~</strong> Javascript</p>
+                                            <div class="title">
+                                                <div class="border-top title-parts"></div>
+                                                <p class="sub-title title-parts">Liens</p>
+                                                <div class="border-top-right title-parts"></div>
+                                            </div>
+                                            <a href="https://charlottesaidi.github.io/planets-fact/" class="btn-primary btn-small wave-effect" >Visiter</a>
+                                            <a href="https://www.frontendmentor.io/solutions/planets-fact-site-with-vuejs-sass-and-javascript-yo1U52F-m" class="btn-primary btn-small wave-effect" >FrontEnd Mentor</a>
+                                        </figcaption>
+                                    </figure>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col s12 l6">
+                            <ul class="demo-3">
+                                <li>
+                                    <figure>
                                         <img src="assets/images/crowdfunding.webp" alt="Maquette du projet SunnySide" height="400"/>
                                         <figcaption>
                                             <h2 class="teal-text">Crowdfunding Product Page</h2>
@@ -496,7 +522,7 @@
                                                 <div class="border-top-right title-parts"></div>
                                             </div>
                                             <a href="https://charlottesaidi.github.io/crowdfunding-product-page/" class="btn-primary btn-small wave-effect" >Visiter</a>
-                                            <a href="https://www.frontendmentor.io/" class="btn-primary btn-small wave-effect" >FrontEnd Mentor</a>
+                                            <a href="https://www.frontendmentor.io/solutions/crowdfunding-product-page-with-vuejs-and-materializecss-aQavIKE_u" class="btn-primary btn-small wave-effect" >FrontEnd Mentor</a>
                                         </figcaption>
                                     </figure>
                                 </li>
@@ -550,13 +576,16 @@
                                                 <div class="border-top-right title-parts"></div>
                                             </div>
                                             <a href="https://charlottesaidi.github.io/loopstudios-challenge-solution/" class="btn-primary btn-small wave-effect" >Visiter</a>
-                                            <a href="https://www.frontendmentor.io/" class="btn-primary btn-small wave-effect" >FrontEnd Mentor</a>
+                                            <a href="https://www.frontendmentor.io/solutions/responsive-loopstudios-homepage-with-html-css-and-jquery-8MCbw5BmH" class="btn-primary btn-small wave-effect" >FrontEnd Mentor</a>
                                         </figcaption>
                                     </figure>
                                 </li>
                             </ul>
                         </div>
 
+                    </div> 
+
+                    <div class="row hidden" id="show_0">
                         <div class="col s12 l6">
                             <ul class="demo-3">
                                 <li>
@@ -583,9 +612,6 @@
                                 </li>
                             </ul>
                         </div>
-                    </div> 
-
-                    <div class="row hidden" id="show_0">
                         <div class="col s12 l6">
                             <ul class="demo-3">
                                 <li>
@@ -606,7 +632,7 @@
                                                 <div class="border-top-right title-parts"></div>
                                             </div>
                                             <a href="https://charlottesaidi.github.io/Sunnyside-agency-challenge-solution/" class="btn-primary btn-small wave-effect" >Visiter</a>
-                                            <a href="https://www.frontendmentor.io/" class="btn-primary btn-small wave-effect" >FrontEnd Mentor</a>
+                                            <a href="https://www.frontendmentor.io/solutions/sunny-side-landing-page-with-htmlcss-and-jquery-3NqBfKbwm" class="btn-primary btn-small wave-effect" >FrontEnd Mentor</a>
                                         </figcaption>
                                     </figure>
                                 </li>
