--- a/politique-de-confidentialite.html
+++ b/politique-de-confidentialite.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="nav-wrapper col s12 m12">
                         <ul class="right">
-                            <li><a class="headlink grey-text tealVersion" href="https://charlottesaidi.github.io/portfolio/">Retour au Portfolio</a></li>
+                            <li><a class="head-link grey-text tealVersion" href="https://charlottesaidi.github.io/portfolio/">Retour au Portfolio</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -132,7 +132,7 @@
 
         </div>
         <footer class="footer-page black">
-            <div class="footer-copyright">
+            <div class="policy footer-copyright">
                 <div class="container">
                     <div class="row">
                         <ul class="col s12 l6 center-align">
