added en version CV

--- a/en.html
+++ b/en.html
@@ -315,7 +315,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <h5 class="right-align">Frameworks et librairies</h5>
+                            <h5 class="right-align">Frameworks and librairies</h5>
                             <div class="card-panel teal lighten-4 z-depth-4">
                                 <div class="row">
                                     <div class="col s12">
@@ -785,12 +785,12 @@
                           </div>
                     </div>
 
-                    <!-- <p class="upload_cv center-align">
+                    <p class="upload_cv center-align">
                         <span>If you have a preference for more classic resumes, you can download mine right here: </span>
-                        <a class="download_btn" href="assets/download/cv-saidi-charlotte.pdf" download>
+                        <a class="download_btn" href="assets/download/cv-saidi-charlotte-en.pdf" download>
                             <img src="assets/images/pdf.webp" alt="PDF icon" width="80">
                         </a>
-                    </p> -->
+                    </p>
 
                 </div>
             </div>
