--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- CSS  -->
         <link rel="preload" as="image" href="assets/images/separation.webp">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <link href="assets/css/style.css" type="text/css" rel="stylesheet"/>
+        <link href="assets/css/style.min.css" type="text/css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
@@ -898,7 +898,7 @@
         <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="assets/js/main.min.js"></script>
 
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
