--- a/index.html
+++ b/index.html
@@ -58,16 +58,14 @@
         </ul>
         <!-- Mobile Menu -->
 
-        <h1 class="hidden" style="position: absolute; left: -500000px">Charlotte Saidi - Développeuse Web - Portfolio</h1>
-
         <div id="pageTop" class="main scrollspy">
             <div class="caption">
                 <div class="box-caption white">
                     <div id="caption-border-top" class="border-top"></div>
                     <div class="text-caption center-align">
-                        <h3 class="grey-text text-darken-3">Charlotte Saidi</h3>
-                        <p class="sep"></p>
-                        <h5 class="light grey-text text-lighten-1">Développeuse Web Junior</h5>
+                        <h1><span class="name grey-text text-darken-3">Charlotte Saidi</span>
+                        <span class="sep"></span>
+                        <span class="job light grey-text text-lighten-1">Développeuse Web Junior</span></h1>
                     </div>
                 </div>
             </div>
