--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
         <header>
             <div class="row" style="margin: 0px; text-align: center;">
-                <div id="header-border" class="border-top-right hide"></div>
+                <!-- <div id="header-border" class="border-top-right hide"></div> -->
                 <nav class="transparent nav z-depth-2">
                     <div class="logo">
                         <img src="assets/images/logo.webp" alt="Logo C.S" class="logo-img">
@@ -897,13 +897,4 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="assets/js/main.min.js"></script>
-
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-60673008-2', 'auto');
-        ga('send', 'pageview');
-        </script>
 </html>
