--- a/politique-de-confidentialite.html
+++ b/politique-de-confidentialite.html
@@ -25,7 +25,7 @@
 
         <header>
             <div class="row" style="margin: 0px; text-align: center;">
-                <div class="border-top-right"></div>
+                <!-- <div class="border-top-right"></div> -->
                 <nav class="white nav z-depth-2">
                     <div class="logo back-logo">
                         <img src="assets/images/logo.webp" alt="Logo C.S" class="logo-img">
@@ -143,14 +143,5 @@
                 </div>
             </div>
         </footer>
-
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-60673008-2', 'auto');
-        ga('send', 'pageview');
-        </script>
     </body>
 </html>
