--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                                             </div>
                                             <div class="links">
                                                 <a href="https://github.com/charlottesaidi/keepvibz" class="btn-primary btn-small wave-effect" >Code Source</a>
-                                                <a href="https://charlottesaidi.github.io/keepvibz-presentation-reveal.js/" class="btn-primary btn-small wave-effect" >Présentation du projet</a>
+                                                <a href="https://keepvibz.ovh/" class="btn-primary btn-small wave-effect" >Visiter</a>
                                             </div>
                                         </figcaption>
                                     </figure>
