--- a/en.html
+++ b/en.html
@@ -588,7 +588,7 @@
                                             </div>
                                             <div class="links">
                                                 <a href="https://github.com/charlottesaidi/keepvibz" class="btn-primary btn-small wave-effect" >Source Code</a>
-                                                <a href="https://charlottesaidi.github.io/keepvibz-presentation-reveal.js/" class="btn-primary btn-small wave-effect" >Presentation of the Project</a>
+                                                <a href="https://keepvibz.ovh/" class="btn-primary btn-small wave-effect" >Visit</a>
                                             </div>
                                         </figcaption>
                                     </figure>
