--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                                         <img src="assets/images/keepvibz.webp" alt="Maquette du projet KeepVibz" height="400"/>
                                         <figcaption>
                                             <h2 class="teal-text">KeepVibz</h2>
-                                                <p>Projet pédagogique de soutenance en groupe, à présenter devant un Jury. Le site est encore en développement.</p>
+                                                <p>Projet pédagogique de soutenance en groupe à présenter devant un Jury.</p>
                                             <div class="title">
                                                 <div class="border-top title-parts"></div>
                                                 <p class="sub-title title-parts">Outils</p>
