--- a/en.html
+++ b/en.html
@@ -574,7 +574,7 @@
                                         <img src="assets/images/keepvibz.webp" alt="Maquette du projet KeepVibz" height="400"/>
                                         <figcaption>
                                             <h2 class="teal-text">KeepVibz</h2>
-                                                <p>School group project, to be submitted to a board. The site is still in development but it should be deployed in a few weeks. Got an A</p>
+                                                <p>School group project, to be submitted to a board. Got an A :)</p>
                                             <div class="title">
                                                 <div class="border-top title-parts"></div>
                                                 <p class="sub-title title-parts">Tools</p>
