change style + fr seulement

--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
                     </div>
                     <div class="nav-wrapper col s12 m12">
                         <ul class="right hide-on-small-only">
-                        <li><a class="head-link" href="#aPropos">A propos</a></li>
-                        <li><a class="head-link" href="#competences">Compétences</a></li>
-                        <li><a class="head-link" href="#portfolio">Portfolio</a></li>
-                        <li><a class="head-link" href="#formations">Formations</a></li>
-                        <li><a class="head-link" href="#contact">Me contacter</a></li>
-                        <li class="nav-icons"><a href="https://charlottesaidi.github.io/portfolio/en"><img class="flag_icons" src="assets/images/united-kingdom.svg" alt="United-Kingdom flag"></a></li>
+                            <li><a class="head-link" href="#aPropos">A propos</a></li>
+                            <li><a class="head-link" href="#competences">Compétences</a></li>
+                            <li><a class="head-link" href="#portfolio">Portfolio</a></li>
+                            <li><a class="head-link" href="#formations">Formations</a></li>
+                            <li><a class="head-link" href="#contact">Me contacter</a></li>
                         </ul>
                         <a href="#" data-target="slide-out" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
                     </div>
@@ -45,10 +44,7 @@
         </header>
         <!-- Mobile Menu -->
         <ul id="slide-out" class="sidenav nav right">
-            <li class="border-top-right"></li>
-            <li class="row">
-                <a class="col s6" href="https://charlottesaidi.github.io/portfolio/en"><img class="flag_icons" src="assets/images/united-kingdom.svg" alt="United-Kingdom flag"></a>
-                <a class="sidenav-close right-align col s6" href="#">X</a></li>
+            <li><a class="sidenav-close right-align" href="#">X</a></li>
             <li><a class="sidenav-close sidenav-head-link" href="#aPropos">A propos</a></li>
             <li><a class="sidenav-close sidenav-head-link" href="#competences">Compétences</a></li>
             <li><a class="sidenav-close sidenav-head-link" href="#portfolio">Portfolio</a></li>
@@ -60,8 +56,7 @@
 
         <div id="pageTop" class="main scrollspy">
             <div class="caption">
-                <div class="box-caption white">
-                    <div id="caption-border-top" class="border-top"></div>
+                <div id="caption-border-top" class="box-caption white z-depth-1">
                     <div class="text-caption center-align">
                         <h1><span class="name grey-text text-darken-3">Charlotte Saidi</span>
                         <span class="sep"></span>
@@ -101,7 +96,7 @@
                                 <h5 class="col s12 l6">Langages</h5>
                                 <h5 class="col s12 l6 right-align">Frameworks et librairies</h5>
                             </div>
-                            <div class="card-panel teal lighten-4 z-depth-4">
+                            <div class="card-panel teal lighten-5 z-depth-4">
                                 <div class="row">
                                     <div class="col s12 l6">
                                         <div class="row valign-wrapper">
@@ -243,7 +238,7 @@
 
                         <div id="mobileBlock" class="hide-on-large-only">
                             <h5 class="left-align">Langages</h5>
-                            <div class="card-panel teal lighten-4 z-depth-4">
+                            <div class="card-panel teal lighten-5 z-depth-4">
                                 <div class="row">
                                     <div class="col s12">
                                         <div class="row valign-wrapper">
@@ -315,7 +310,7 @@
                                 </div>
                             </div>
                             <h5 class="right-align">Frameworks et librairies</h5>
-                            <div class="card-panel teal lighten-4 z-depth-4">
+                            <div class="card-panel teal lighten-5 z-depth-4">
                                 <div class="row">
                                     <div class="col s12">
                                         <div class="row valign-wrapper">
@@ -390,7 +385,7 @@
 
                         <div id="block2" class="col s12 l7">
                             <h5>Autres</h5>
-                            <div class="card-panel teal lighten-4 z-depth-4">
+                            <div class="card-panel teal lighten-5 z-depth-4">
                                 <div class="row valign-wrapper">
                                     <div class="col s2 hide-on-small-only">
                                         <img src="assets/images/github.webp" alt="Github icon" class="circle" width="50" height="50">
@@ -435,10 +430,10 @@
 
                         <div class="col s12 l5 perso">
                             <h5 class="right-align">Personnelles</h5>
-                            <div class="card-panel teal lighten-4 z-depth-4">
+                            <div class="card-panel teal lighten-5 z-depth-4">
                                 <div class="row valign-wrapper">
                                     <div class="col s2 hide-on-small-only">
-                                        <img src="assets/images/comments-solid.svg" alt="Font-awesome comments icon" class="circle" width="45" height="45">
+                                        <img src="assets/images/comments-solid.webp" alt="Font-awesome comments icon" class="circle" width="45" height="45">
                                     </div>
                                     <div class="col s12 m10">
                                         <p class="black-text">
@@ -448,7 +443,7 @@
                                 </div>
                                 <div class="row valign-wrapper">
                                     <div class="col s2 hide-on-small-only">
-                                        <img src="assets/images/tasks-solid.svg" alt="Font-awesome tasks icon" class="circle" width="45" height="45">
+                                        <img src="assets/images/tasks-solid.webp" alt="Font-awesome tasks icon" class="circle" width="45" height="45">
                                     </div>
                                     <div class="col s12 m10">
                                         <p class="black-text">
@@ -458,7 +453,7 @@
                                 </div>
                                 <div class="row valign-wrapper">
                                     <div class="col s2 hide-on-small-only">
-                                        <img src="assets/images/book-reader-solid.svg" alt="Font-awesome reader icon" class="circle" width="45" height="45">
+                                        <img src="assets/images/book-reader-solid.webp" alt="Font-awesome reader icon" class="circle" width="45" height="45">
                                     </div>
                                     <div class="col s12 m10">
                                         <p class="black-text">
@@ -728,7 +723,7 @@
                         <div class="timeline2">
                             <ul>
                               <li>
-                                <div class="card-panel teal lighten-4 z-depth-4">
+                                <div class="card-panel teal lighten-5 z-depth-4">
                                     <strong>Certification Développeur Codeur Web</strong> 
                                     <p class="row">
                                       <i class="material-icons col s1">school</i> 
@@ -745,7 +740,7 @@
                                 </span>
                               </li>
                               <li>
-                                <div class="card-panel teal lighten-4 z-depth-4">
+                                <div class="card-panel teal lighten-5 z-depth-4">
                                     <strong>Licence Langues Etrangères Appliquées</strong> 
                                     <p class="row">
                                       <i class="material-icons col s1">school</i> 
@@ -762,7 +757,7 @@
                                 </span>
                               </li>
                               <li>
-                                <div class="card-panel teal lighten-4 z-depth-4">
+                                <div class="card-panel teal lighten-5 z-depth-4">
                                     <strong>Baccalauréat Littéraire</strong> 
                                     <p class="row">
                                       <i class="material-icons col s1">school</i> 
